meta changes, hidden overflow mobile fix

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,13 @@
   position: relative;
   z-index: 5;  
 }
+.hidden
+{
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 5;
+}
 .menu li
 {
   list-style-type: none;
@@ -58,7 +65,7 @@
 
 @media screen and (max-width:868px)
 {
-  body 
+  .hidden 
   {
     overflow-x: hidden;
   }
@@ -119,7 +126,6 @@
 {
   height: 20px !important;
   background-color: rgba(0, 0, 0, 0)
-
 }
 .blankc
 {
@@ -137,7 +143,7 @@ table
   font-size: 3rem;
   font-family: "Ubuntu";
   margin: 10px;
-  z-index: 3;
+  z-index: 4;
   display: inline-block
 }
 table img
